--- a/404.html
+++ b/404.html
@@ -11,4 +11,4 @@ WebFontConfig = {
   var s = document.getElementsByTagName('script')[0];
   s.parentNode.insertBefore(wf, s);
 })();
-//]]></script></head><body><div role="main" class="container container--articles"><h1>404&mdash;Page Not Found</h1><p>This page could not be found.</p></div><footer role="contentinfo" class="footer"><p>Built with <a href="http://harpjs.com">Harp</a>. Published on the <a href="http://harp.io">Harp Platform</a>.</p></footer></body></html>
+//]]></script></head><body><div role="main" class="container container--articles"><h1>404&mdash;Page Not Found</h1><p>This page could not be found.</p></div><footer role="contentinfo" class="footer"><p>Built with <a href="http://harpjs.com">Harp</a>. Published on <a href="https://github.com/">GitHub</a> by <a href="http://wearetheplaymakers.com/">wearetheplaymakers.com</a></p></footer></body></html>
